[package]
name = "cargo_io"
version = "0.1.0"
edition = "2021"
authors = ["volh <volh@bap.jp>"]
description = "A simple Rust library."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = false

[lib]
name = "my_library"