[package]
name = "sm_dev"
version = "0.1.0"
edition = "2021"
authors = ["lehongvo"]
description = "Math operations with safety checks that throw on error"
repository = "https://github.com/lehongvo/RUST_BLOCKCHAIN_TUTORIAL/tree/main/library-mod"
license = "MIT"

[dependencies]
safemath_dev = "0.1.0"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = false
