[package]
name = "block_mod"
version = "0.1.0"
edition = "2021"
authors = ["Vo Le Hong"]
description = "The above Rust functions perform arithmetic operations on unsigned 128-bit integers, returning the"
license = "MIT"
repository = "https://github.com/lehongvo/RUST_BLOCKCHAIN_TUTORIAL/tree/main/library_dev_bc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
